user controller and factory created

--- a/views/signup.html
+++ b/views/signup.html
@@ -33,6 +33,6 @@
     </div>
   </form>
   <div class="button">
-    <a class="btn btn-primary btn-lg" ng-href="#!/signup" role="button">Sign Me Up</a>
+    <a class="btn btn-primary btn-lg" href="" role="button" ng-click="signUp()">Sign Me Up</a>
   </div>
 </div>
