--- a/views/splash.html
+++ b/views/splash.html
@@ -4,7 +4,7 @@
     A simple, featherweight markdown blogger
   </p>
   <hr class="my-4">
-  <p>Have a look at <a href="https://github.com/jsheridanwells/PosterMD-Client" target="_blank">source code</a>.</p>
+  <p>Have a look at the fine <a href="https://github.com/jsheridanwells/PosterMD-Client" target="_blank">source code</a>.</p>
   <p class="lead">
     <a class="btn btn-primary btn-lg" ng-href="#!/signup" role="button">Sign Up</a>
     <a class="btn btn-primary btn-lg" ng-href="#!/login" role="button">Log In</a>
